<resources>
    <string name="app_name">Interview Question</string>

    <string name="no_data">No Data</string>

    <!--    TITLE      -->
    <string name="title_transaction">Transaction</string>

    <!--    MENU      -->
    <string name="action_add">Add</string>

    <string name="tab_friend">Friend</string>
    <string name="tab_setting">Setting</string>
    <string name="tab_contact">Contact</string>

    <string name="comment">Comment</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>
    <string name="place">Place</string>
    <string name="friend">Friend</string>
    <string name="setting">Setting</string>
    <string name="contact">Contact us</string>

    <string name="sp_select_currency"> SELECT CURRENCY </string>


    <!--    BUTTON      -->
    <string name="btn_login"> LOGIN </string>
    <string name="btn_register_user"> REGISTER USER </string>
    <string name="btn_sign_up"> Sign Up</string>
    <string name="btn_forgot_password"> FORGOT PASSWORD </string>
    <string name="btn_change_password"> CHANGE PASSWORD </string>
    <string name="btn_resend"> RESEND </string>
    <string name="btn_submit"> SUBMIT </string>
    <string name="btn_add"> ADD </string>
    <string name="btn_edit"> EDIT </string>
    <string name="btn_update"> UPDATE </string>
    <string name="btn_verify"> VERIFY </string>
    <string name="btn_verified"> VERIFIED </string>
    <string name="btn_cancel"> CANCEL </string>
    <string name="btn_skip"> SKIP </string>
    <string name="btn_next"> NEXT </string>
    <string name="btn_finish"> FINISH </string>
    <string name="btn_previous"> PREVIOUS </string>
    <string name="btn_payment"> PAYMENT </string>

    <!--    HINT      -->
    <string name="hint_description"> Description </string>
    <string name="hint_name"> Name </string>
    <string name="hint_amount"> Amount </string>
    <string name="hint_username"> Username </string>
    <string name="hint_firstname"> Firstname </string>
    <string name="hint_lastname"> Lastname </string>
    <string name="hint_address"> Address </string>
    <string name="hint_pincode"> Pincode </string>
    <string name="hint_city"> City </string>
    <string name="hint_location"> Location </string>
    <string name="hint_email"> Email </string>
    <string name="hint_title"> Title </string>
    <string name="hint_password"> Password </string>
    <string name="hint_confirm_password"> Confirm password </string>
    <string name="hint_current_password"> Current Password </string>
    <string name="hint_new_password"> New password </string>
    <string name="hint_new_confirm_password"> New confirm password </string>
    <string name="hint_mobile"> Mobile </string>
    <string name="hint_country"> Country </string>
    <string name="hint_state"> State </string>
    <string name="hint_zip_code"> Zip code </string>
    <string name="hint_search"> Search </string>
    <string name="hint_currency"> Select currency </string>

    <!--    ERROR MESSAGE      -->
    <string name="msg_connection_time_out">Connection time out, please try again</string>
    <string name="no_internet_message">Internet connection is not available!</string>
    <string name="msg_activity_not_found">No activity found to handle this action.</string>
    <string name="msg_server_not_responding">Server is not responding, please try again</string>
    <string name="msg_something_wrong">Something went wrong, please try again</string>
    <string name="msg_observable_not_null">Observable must not be null</string>
    <string name="msg_callback_not_null">Callback must not be null</string>

    <string name="msg_no_data">No Data</string>

    <string name="msg_select_one_item">Select one item</string>
    <string name="msg_order_not_select">Order not select</string>
    <string name="msg_empty_email">Enter email</string>
    <string name="msg_valid_email">Enter valid email</string>
    <string name="msg_empty_password">Enter password</string>
    <string name="msg_valid_password">Password min 8 characters alphanumeric 1 upper and 1 lowercase and 1 numeric</string>
    <string name="msg_empty_confirm_password">Enter confirm password</string>
    <string name="msg_empty_valid_confirm_password">Confirm password min 8 characters alphanumeric 1 upper and 1 lowercase and 1 numeric</string>
    <string name="msg_match_password">Password not match</string>
    <string name="msg_empty_current_password">Enter current password</string>
    <string name="msg_valid_current_password">Current password min 8 characters alphanumeric 1 upper and 1 lowercase and 1 numeric</string>
    <string name="msg_empty_new_password">Enter new password</string>
    <string name="msg_valid_new_password">New password min 8 characters alphanumeric 1 upper and 1 lowercase and 1 numeric</string>
    <string name="msg_empty_new_confirm_password">Enter new confirm password</string>
    <string name="msg_valid_new_confirm_password">New confirm password min 8 characters alphanumeric 1 upper and 1 lowercase and 1 numeric</string>
    <string name="msg_not_match_new_password">Confirm New password does not match New Password.</string>
    <string name="msg_empty_username">Enter username</string>
    <string name="msg_valid_username">Username must be 3 to 10 character.</string>
    <string name="msg_empty_mobile">Enter mobile</string>
    <string name="msg_valid_mobile">Mobile no. must be 10 character</string>
    <string name="msg_read_file_no">File not read</string>
    <string name="msg_otp_empty">Enter OTP</string>
    <string name="msg_otp_verify_success">OTP verify successful</string>
    <string name="msg_otp_not_match">OTP not match</string>
    <string name="msg_api_call_successful">API Call Successful</string>

    <!--    LABEL MESSAGE      -->
    <string name="forgot_password">Forgot password?</string>
    <string name="login_no_account">Don\'t have an account?</string>
    <string name="login_register">REGISTER</string>
    <string name="sign_up">Sign up</string>
    <string name="or">OR</string>
    <string name="timer">00:00</string>
    <string name="details">DETAILS</string>
    <string name="view">VIEW</string>
    <string name="mobile">Mobile</string>
    <string name="city_with_location">City (Location)</string>
    <string name="date_time">Date - Time</string>
    <string name="edit"> EDIT </string>
    <string name="lead_id">Lead Id</string>
    <string name="user_id">User Id</string>
    <string name="username">Username</string>
    <string name="address">Address</string>
    <string name="email"> Email </string>
    <string name="pincode"> Pincode </string>
    <string name="name"> Name </string>
    <string name="total">Total : </string>
    <string name="question_total">Question 0 / 0</string>
    <string name="question">Question</string>
    <string name="found">0 found</string>
    <string name="congratulation">Congratulation</string>
    <string name="finish">Finish</string>
    <string name="solution">Solution</string>


    <string name="dialog_exist"> Exit </string>
    <string name="dialog_cancel"> Cancel </string>
    <string name="dialog_ok"> OK </string>
    <string name="dialog_delete"> Delete </string>
    <string name="dialog_message_app_exist"> Are you want to exit? </string>
    <string name="dialog_message_logout"> Are you want to logout? </string>
    <string name="dialog_message_delete"> Are you want to delete? </string>
    <string name="dialog_confirm"> Confirm </string>
    <string name="dialog_title_select_country"> Select country </string>


    <string name="adp_chapter_name"> Chapter Name </string>
    <string name="adp_no"> No. </string>

    <!--    FONT      -->
    <string name="regular_font">fonts/aileron_regular.otf</string>
    <string name="light_font">fonts/aileron_light.otf</string>
    <string name="semi_bold_font">fonts/aileron_semi_bold.otf</string>


    <!-- SOCIAL ID -->
    <string name="facebook_app_id"></string>
    <string name="fb_login_protocol_scheme"></string>
    <string name="google_client_id"></string>
    <string name="admin_error_sent">Server error</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

</resources>
