<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/medium">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="@dimen/iv_app_logo"
            android:layout_height="@dimen/iv_app_logo"
            android:layout_gravity="center"
            android:tint="@color/colorPrimary" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/TextExtraLargeSizeRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/small"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium"
            android:background="@drawable/style_edittext">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/appEdtUserName"
                style="@style/styleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableLeft="@drawable/username"
                android:hint="@string/hint_username"
                android:inputType="textPersonName" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium"
            android:background="@drawable/style_edittext">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/appEdtEmail"
                style="@style/styleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableLeft="@drawable/email"
                android:hint="@string/hint_email"
                android:inputType="textWebEmailAddress" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium"
            android:background="@drawable/style_edittext">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/appEdtPassword"
                style="@style/styleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/appIvPassword"
                android:background="@null"
                android:drawableLeft="@drawable/password"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@id/appIvPassword"
                android:layout_width="@dimen/iv_form"
                android:layout_height="@dimen/iv_form"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:tint="@color/colorIconTintForm"
                app:srcCompat="@drawable/visibility_on" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium"
            android:background="@drawable/style_edittext">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/appEdtConfirmPassword"
                style="@style/styleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/appIvConfirmPassword"
                android:background="@null"
                android:drawableLeft="@drawable/password"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@id/appIvConfirmPassword"
                android:layout_width="@dimen/iv_form"
                android:layout_height="@dimen/iv_form"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:tint="@color/colorIconTintForm"
                app:srcCompat="@drawable/visibility_on" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium"
            android:background="@drawable/style_edittext">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/appEdtMobile"
                style="@style/styleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableLeft="@drawable/mobile"
                android:hint="@string/hint_mobile"
                android:inputType="phone" />

        </RelativeLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appBtnSignUp"
            style="@style/styleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/regularSmall"
            android:text="@string/btn_sign_up" />

    </LinearLayout>

</ScrollView>
