<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/medium">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="@dimen/iv_app_logo"
                android:layout_height="@dimen/iv_app_logo"
                android:layout_gravity="center"
                android:tint="@color/colorPrimary" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/TextExtraLargeSizeRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/small"
                android:textColor="@color/colorPrimary"
                android:text="@string/app_name" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium"
                android:background="@drawable/style_edittext">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/appEdtEmail"
                    style="@style/styleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/hint_email"
                    android:inputType="textPassword" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium"
                android:background="@drawable/style_edittext">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/appEdtPassword"
                    style="@style/styleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/appIvPassword"
                    android:background="@null"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />

                <android.support.v7.widget.AppCompatImageView
                    android:id="@id/appIvPassword"
                    android:layout_width="@dimen/iv_form"
                    android:layout_height="@dimen/iv_form"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:tint="@color/colorIconTintForm" />
            </RelativeLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/appBtnLogin"
                style="@style/styleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/regularSmall"
                android:text="@string/btn_login" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/appTvForgotPassword"
                style="@style/TextLightSizeRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:textColor="@color/colorForgotPassword"
                android:layout_gravity="right"
                android:padding="@dimen/small"
                android:text="@string/forgot_password" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/appIvFacebook"
                    android:layout_width="@dimen/iv_social_login"
                    android:layout_height="@dimen/iv_social_login"
                    app:srcCompat="@drawable/ic_facebook" />

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/appIvGmail"
                    android:layout_width="@dimen/iv_social_login"
                    android:layout_height="@dimen/iv_social_login"
                    android:layout_marginLeft="@dimen/medium"
                    app:srcCompat="@drawable/ic_google_plus" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/TextLightSizeRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingBottom="@dimen/small"
                    android:paddingTop="@dimen/small"
                    android:text="@string/login_no_account" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/appTvSignUp"
                    style="@style/TextSemiBoldSizeRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="@dimen/tiny"
                    android:paddingBottom="@dimen/small"
                    android:paddingTop="@dimen/small"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorPrimaryDark" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>